--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -13,20 +17,15 @@ body {
     line-height: 1.5;
     letter-spacing: 1px;
 
-
+    /* centers everything: */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-
-       /* background-repeat: no-repeat; */
 }
 
-
-
-
-
+/* ------TYPOGRAPHY-------- */
 h1 {
     font-family: 'Finger Paint', cursive;
     font-size: 2rem;
@@ -38,6 +37,8 @@ h2 {
     font-size: 1.5rem;  
 }
 
+
+/* ------MAIN SECTION-------- */
 input {
     padding: 1.5em;
     width: 50%;
@@ -70,11 +71,12 @@ button:focus {
     display: none;
 }
 
-
 #submit {
     margin-top: 30px;
 }
 
+
+/* ------FOOTER-------- */
 footer {
     font-family: 'Mirza', cursive;
     font-size: 0.75rem;
@@ -82,9 +84,30 @@ footer {
     bottom: 0;
 }  
 
-@media only screen and (max-width: 500px) {
-    footer {
-       display: none;
-    }
-  }
 
+  /* ------MEDIA QUERIEs-------- */
+  @media only screen and (max-width: 500px) {
+
+      h1 {
+          font-size: 1.5rem;
+      }
+
+      h2 {
+          font-size: 1rem;
+      }
+
+      footer {
+          font-size: 0.5rem;
+          position: relative;
+          margin-top: 50px;
+      }
+
+      input {
+          padding: 1em;
+      }
+
+      button {
+          padding: 0.5em;
+      }
+
+  }
